--- a/src/app/components/m-incentivos/login-incentivos/login-incentivos.component.html
+++ b/src/app/components/m-incentivos/login-incentivos/login-incentivos.component.html
@@ -51,14 +51,12 @@
     <div class="row mt-4 justify-content-center mt-4">
       <div class="col-sm-6">
         <h3 class="text-center" style="color: aliceblue;">Confirmación de Incentivos</h3>
-
-        <form>
+        <form (submit)="login($event)">
           <div class="form-group">
             <label for="dni" class="mt-5 mb-2" style="display: block; text-align: center; font-size: 20px; color: aliceblue;">Ingrese su DNI :</label>
             <input type="text" class="form-control custom-input" id="dni" (keypress)="onlyNumbers($event)" [formControl]="dni">
           </div>
-
-          <button type="button" class="btn btn-primary d-block mx-auto mt-5 custom-button mb-4" (click)="login($event)">Ingresar</button>
+          <button type="submit" class="btn btn-primary d-block mx-auto mt-5 custom-button mb-4">Ingresar</button>
         </form>
       </div>
     </div>
