--- a/src/app/components/m-incentivos/login-incentivos/login-incentivos.component.html
+++ b/src/app/components/m-incentivos/login-incentivos/login-incentivos.component.html
@@ -53,8 +53,10 @@
         <h3 class="text-center" style="color: aliceblue;">Confirmación de Incentivos</h3>
         <form (submit)="login($event)">
           <div class="form-group">
-            <label for="dni" class="mt-5 mb-2" style="display: block; text-align: center; font-size: 20px; color: aliceblue;">Ingrese su DNI :</label>
+            <label for="dni" class="mt-5 mb-2" style="display: block; text-align: center; font-size: 20px; color: aliceblue;"> DNI :</label>
             <input type="text" class="form-control custom-input" id="dni" (keypress)="onlyNumbers($event)" [formControl]="dni">
+            <label for="dni" class="mt-5 mb-2" style="display: block; text-align: center; font-size: 20px; color: aliceblue;">Contraseña :</label>
+            <input type="text" class="form-control custom-input">
           </div>
           <button type="submit" class="btn btn-primary d-block mx-auto mt-5 custom-button mb-4">Ingresar</button>
         </form>
