--- a/src/app/components/m-incentivos/login-incentivos/login-incentivos.component.html
+++ b/src/app/components/m-incentivos/login-incentivos/login-incentivos.component.html
@@ -53,13 +53,14 @@
         <h3 class="text-center" style="color: aliceblue;">Confirmación de Incentivos</h3>
         <form (submit)="login($event)">
           <div class="form-group">
-            <label for="dni" class="mt-5 mb-2" style="display: block; text-align: center; font-size: 20px; color: aliceblue;"> DNI :</label>
-            <input type="text" class="form-control custom-input" id="dni" (keypress)="onlyNumbers($event)" [formControl]="dni">
-            <!-- <label for="dni" class="mt-5 mb-2" style="display: block; text-align: center; font-size: 20px; color: aliceblue;">Contraseña :</label> -->
-            <!-- <input type="text" class="form-control custom-input"> -->
+            <label for="dni" class="mt-4 mb-2" style="display: block; text-align: center; font-size: 20px; color: aliceblue;"> DNI :</label>
+            <input type="text" class="form-control custom-input" id="usuario" [(ngModel)]="usuario" name="usuario">
+            <label for="clave" class="mt-3 mb-2" style="display: block; text-align: center; font-size: 20px; color: aliceblue;">Contraseña :</label>
+            <input type="password" class="form-control custom-input" id="clave" [(ngModel)]="clave" name="clave">
           </div>
           <button type="submit" class="btn btn-primary d-block mx-auto mt-5 custom-button mb-4">Ingresar</button>
         </form>
+        
       </div>
     </div>
   </div>
