se agrego un archivo redirects

--- a/src/app/components/m-incentivos/incentivos/incentivos.component.html
+++ b/src/app/components/m-incentivos/incentivos/incentivos.component.html
@@ -2,7 +2,7 @@
   <div class="container" style="padding: 10px">
     <div class="logo-container">
       <img
-        src="../../../assets/img/logo_rom.png"
+      src="https://firebasestorage.googleapis.com/v0/b/temptationproject-85bb8.appspot.com/o/uploads%2Flogo_rom.png?alt=media&token=8c4b7d31-be6b-4511-b114-7812e01a6cd7"
         alt="Logo"
         class="img-fluid"
         style="max-width: 200px"
