--- a/src/app/components/m-incentivos/login-incentivos/login-incentivos.component.html
+++ b/src/app/components/m-incentivos/login-incentivos/login-incentivos.component.html
@@ -35,7 +35,7 @@
 <div class="navbar">
   <div class="container" style="padding: 10px;">
     <div class="logo-container">
-      <img src="../../../assets/img/logo_rom.png" alt="Logo" class="img-fluid" style="max-width: 200px;">
+      <img src="https://firebasestorage.googleapis.com/v0/b/temptationproject-85bb8.appspot.com/o/uploads%2Flogo_rom.png?alt=media&token=8c4b7d31-be6b-4511-b114-7812e01a6cd7" alt="Logo" class="img-fluid" style="max-width: 200px;">
     </div>
   </div>
 </div>
@@ -45,7 +45,7 @@
 
     <div class="row justify-content-center">
       <div class="col-sm-6 text-center mt-5">
-        <img src="../../../assets/img/logo_rom_blanco.png" alt="Logo" class="img-fluid" style="max-width: 200px;">
+        <img src="https://firebasestorage.googleapis.com/v0/b/temptationproject-85bb8.appspot.com/o/uploads%2Flogo_rom_blanco.png?alt=media&token=1fbdcd39-9eb0-47d0-a6d5-53368f251316" alt="Logo" class="img-fluid" style="max-width: 200px;">
       </div>
     </div>
     <div class="row mt-4 justify-content-center mt-4">
