--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<app-navbar></app-navbar>
+<!-- <app-principal></app-principal> -->
 <router-outlet></router-outlet>
-<!-- <app-login></app-login> -->
+
+
+
